# testh7

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  dap.bat  flash.bat
.cargo/: config.toml
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: fusion.rs  main.rs  mpu9250.rs  shell.rs  usb_bulk.rs  usb_hid.rs
host/: Cargo.toml
host/src/: main.rs
protocol/: Cargo.toml
protocol/src/: commands.rs  lib.rs
src/: main.rs  shell.rs  usb_hid.rs
tools/: usb_hid_test.py
