[package]
name = "stm32h743-led-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"

# 所有 Embassy 相关依赖使用 git 主分支以确保版本一致
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "tick-hz-1_000_000",
] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = [
    "stm32h743ii",
    "time-driver-tim2",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

embedded-io-async = "0.6"
heapless = "0.8"
static_cell = "2.1"
usbd-hid = "0.8"

# RTT 日志 (不依赖 defmt)
rtt-target = "0.6"

# Debug 模式 - 完全可调试，但体积大
[profile.dev]
opt-level = 0
debug = 2

# Release 模式 - 用于最终发布
[profile.release]
opt-level = "z"
lto = true
debug = true

# 可调试的 Release - 平衡优化和调试体验
[profile.release-debuggable]
inherits = "release"
opt-level = 1        # 降低优化级别
lto = false          # 关闭 LTO，保留符号
debug = 2            # 完整调试信息
codegen-units = 1
