# STM32H743 项目 Workspace
#
# 包含:
#   - firmware: 单片机固件 (no_std, thumbv7em-none-eabihf)
#   - protocol: 共享协议库 (no_std + 可选 std)
#   - host: Windows 上位机 (std)
#
# 构建命令:
#   cargo fw      # 编译固件
#   cargo host    # 编译上位机
#   cargo embed   # 烧录固件

[workspace]
members = ["firmware", "protocol", "host"]
resolver = "2"

# ==================== 编译配置 ====================

# Debug 模式 - 完全可调试，但体积大
[profile.dev]
opt-level = 0
debug = 2

# Release 模式 - 用于最终发布
[profile.release]
opt-level = "z"
lto = true
debug = true

# 可调试的 Release - 平衡优化和调试体验
[profile.release-debuggable]
inherits = "release"
opt-level = 1        # 降低优化级别
lto = false          # 关闭 LTO，保留符号
debug = 2            # 完整调试信息
codegen-units = 1
